--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 				</div>
 			</div>
 		</section>
-
+<a href="demo.html">demo</a>
 		<!-- <section class="colorlib-services" data-section="services">
 			<div class="colorlib-narrow-content">
 				<div class="row">
