--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 								<div class="about-desc">
 									<span class="heading-meta">About Us</span>
 									<h2 class="colorlib-heading">Who Am I?</h2>
-									<p><strong>Hi, I'm Shriharsha K M</strong> — an enthusiastic Java Developer with a strong foundation in OOP and problem-solving. I aim to contribute to a development team and grow by building reliable and efficient applications. I enjoy creating solutions using Java, Web Technologies, and Python, and have a passion for learning new tools and frameworks.</p>
+									<p><strong>Hi, I'm Shriharsha K M....</strong> — an enthusiastic Java Developer with a strong foundation in OOP and problem-solving. I aim to contribute to a development team and grow by building reliable and efficient applications. I enjoy creating solutions using Java, Web Technologies, and Python, and have a passion for learning new tools and frameworks.</p>
 <p>I have worked on projects such as CRUD operations using Servlets and JDBC, the Cafe-Connect Android app, and PyBot — an intelligent Python chatbot with a GUI and AI integration. My skill set spans Java (Core & Advanced), Spring Data JPA, Servlets, JSP, HTML, CSS, Bootstrap, JavaScript, JDBC, MySQL, and more, backed by hands-on internship experience in Android and software development.</p>
 
 								</div>
